# now-playing

./: .gitignore  Cargo.toml  config.toml  license  readme.md
src/: main.rs  song.rs  text.rs
