[package]
name = "now-playing"
version = "0.1.0"
authors = ["charlie <charlieschuy@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.116"
toml = "0.5.6"

[dependencies.sdl2]
version = "0.34.3"
default-features = false
features = ["ttf"]
